<resources>
    <string name="app_name">Support Me!</string>
    <string name="about">About!</string>
    <string name="wordfromdev">Some Words from Developer</string>
    <string name="Greeting">Hello! I Hope you likes my work!\n\nBut folks, Its take lots of time, bunch of hardwork and plenty of money to do all this stuff\nSo If you like my work and respect it then make a small Donation*,\nIt will Apreceate me for my work and Encourage me to work further.\nThank You.\n\nRegards\n-(DEVELOPER NAME)</string>
	<string name="Button1">I love your work(Support me)</string>
	<string name="Button2">I am unable to Support You(But I like)</string>
	<string name="Button3">No! Thank You(Its just average!)</string>
	<string name="Button4">View Donation URL</string>
	<string name="doubttext">*If You feel unsafe here or not able to donate through mobile, then you can also donate from PC too!\nFollow this:-\n1.Just click on \"View Donation URL\" button.\n2.Open same link in browser.\n3.A Paypal page will open, fill amount and donate.</string>
	
	
	<string name="xda_Paypal_ID">4729939</string>
</resources>
